Fix div collapse if user deleted placeholder value
This bug only ocurred if the user entered num1 and chose an operator,
and then deleted the placeholder 0 from the current number box

--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ body {
   border-radius: 4px;
   margin: 8px 2px;
   padding: 4px;
+}
+
+.display .current-num {
+  min-height: 28px;
   font-size: x-large;
   font-weight: 600;
 }
